hphp/test/zend/good/Zend/tests/ns_068.php.expectf

Fatal error: Namespace declaration statement has to be the very first statement in the script in %s/ns_068.php on line 3
